<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tx_profile"
        style="@style/TextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_profile"
        android:paddingLeft="30dp"
        android:drawablePadding="30dp"
        android:text="@string/profile"
        app:layout_constraintBottom_toTopOf="@+id/btn_change_dt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tx_email_profile"
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_email"
        android:paddingLeft="30dp"
        android:gravity="center"
        android:text="@string/profile"
        app:layout_constraintBottom_toTopOf="@+id/btn_change_dt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_profile" />

    <Button
        android:id="@+id/btn_change_dt"
        style="@style/MyButton"
        android:text="@string/change_data_profile"
        android:drawableLeft="@drawable/ic_password"
        android:paddingLeft="30dp"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--        app:icon="@drawable/ic_password"-->
    <!--        app:iconGravity="start"-->

    <Button
        android:id="@+id/btn_saved_pf"
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_portfolio"
        android:paddingLeft="30dp"
        android:text="@string/portfolio_saved"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_saved_res"
        style="@style/MyButton"
        android:drawableLeft="@drawable/ic_save_2"
        android:paddingLeft="30dp"
        android:text="@string/result_saved"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_saved_pf"
        app:layout_constraintVertical_bias="0.05" />


</androidx.constraintlayout.widget.ConstraintLayout>