<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tx_coins_det"
        style="@style/TextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crypto_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/sv_coins_det"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_coins_det">

        <TextView
            android:id="@+id/tv_non"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center" />

        <TextView
            android:id="@+id/tv_prof"
            style="@style/TextBasic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/profitability" />

        <TextView
            android:id="@+id/tv_risc"
            style="@style/TextBasic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/risk" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_coins_det"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/tx_portfolios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_coins_det"
        app:layout_constraintVertical_bias="0.7">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lv_coin_det"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                app:layout_constraintVertical_bias="0.05" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tx_portfolios"
        style="@style/TextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portfolio_header"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_coins_det"
        app:layout_constraintVertical_bias="0.6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/sv_portfolio_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_portfolios">

        <TextView
            android:id="@+id/tv_non_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center" />

        <TextView
            android:id="@+id/tv_prof_p"
            style="@style/TextBasic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/profitability" />

        <TextView
            android:id="@+id/tv_risc_p"
            style="@style/TextBasic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/risk" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_portfolio_list"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_portfolios"
        app:layout_constraintVertical_bias="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lv_portfolios"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_save_c"
        style="@style/MyButton.Purple"
        android:text="@string/save_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"/>

</androidx.constraintlayout.widget.ConstraintLayout>